Bug 116046 - MusicBrainz doesn't respond when there are no matches
Summary: MusicBrainz doesn't respond when there are no matches
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Mandriva RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-11-10 09:50 UTC by Matt Howe
Modified: 2007-07-31 23:01 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matt Howe 2005-11-10 09:50:51 UTC
Version:            (using KDE KDE 3.4.0)
Installed from:    Mandriva RPMs
OS:                Linux

Sometimes when clicking on the 'Fill-in tags using musicbrainz' button, nothing happens. The button just greys out and it sits there doing nothing. I assume that MusicBrainz doesn't have a TRM attached to that track but usually an info box pops up saying that MusicBrainz doesn't know that track. Actually this happens most of the times that MusicBrainz doesn't have an attached trm and I've been using amarok for over a year so I'm preety sure that there is a problem here.
Comment 1 Alexandre Oliveira 2006-04-20 05:37:12 UTC
Is it still valid with tunepimp 0.4.X? 
Comment 2 Matt Howe 2006-05-04 08:53:25 UTC
I've been trying to test this for you but I haven't been able to get MusicBrainz support working at all in my svn build. If you could have I quick look at this post on the amarok forum and help me out I'd greatly appreciate it: http://amarok.kde.org/forum/index.php/topic,12211.0.html
Comment 3 Jocke Andersson 2006-07-04 15:02:04 UTC
I've been experiencing this for some tracks too. Strange thing is that I _know_ some of them have been found earlier.
I _think_ it's a tunepimp issue, since I see some web traffic, but then nothing happens. Might be a problem in Amarok's "KTRM" code too.
Comment 4 Frederik Schwarzer 2006-09-15 17:10:27 UTC
It's similar here.
In my case it doesn't find any matching tag information at all. I tried about 50 songs (some of them definitely worked one or two month ago. The mouse cursor stays the "waiting" one with the clock aside for the rest of the Amarok session (even days if I do not restart it). So the cursor also doesn't change if I hover the barrier between the fields in the header of the playlist. (e.g. between track and length)

Debian SID
KDE 3.5.4
Amarok 1.4.1
Tunepimp 0.4.2

cheers
Comment 5 Greg Meyer 2006-11-05 17:45:28 UTC
With Amarok 1.4.4 and tunepimp 0.4.1 it seems to be working fine.  I know there are problems with tunepimp 0.5.  

Additionally, some distros don't compile amarok against tunepimp for various reasons, so even if you have tunepimp installed, it won't work.  Amarok is not linked to it.  Any chance that is the case here?
Comment 6 Alexandre Oliveira 2006-11-05 17:52:06 UTC
Use tunepimp 0.5.2 or 0.4.4
Comment 7 Torrie Fischer 2006-11-29 01:13:08 UTC
This occurs with me as well. I've found that simply canceling out of the tag dialog does nothing. CPU usage is still being sucked up by the fail(ing|ed) lookup. The only way to end this was to restart Amarok. Here is a patch (my first!) to stop the processing when you cancel the dialog:

Index: tagdialog.cpp
===================================================================
--- tagdialog.cpp       (revision 608612)
+++ tagdialog.cpp       (working copy)
@@ -295,6 +295,7 @@
     m_mbTrack = m_bundle.url();
     KTRMLookup* ktrm = new KTRMLookup( m_mbTrack.path(), true );
     connect( ktrm, SIGNAL( sigResult( KTRMResultList, QString ) ), SLOT( queryDone( KTRMResultList, QString ) ) );
+    connect( pushButton_cancel, SIGNAL(clicked()), ktrm, SLOT(deleteLater()));

     pushButton_musicbrainz->setEnabled( false );
     pushButton_musicbrainz->setText( i18n( "Generating audio fingerprint..." ) );
Comment 8 Mark Kretschmann 2006-11-29 10:49:38 UTC
wm161@wm161.net, I've committed your fix. Thanks! :)
Comment 9 Diego Elio Pettenò 2006-11-29 14:35:31 UTC
Reopening..
Comment 10 Diego Elio Pettenò 2006-11-29 14:36:43 UTC
Resolving as FIXED now, thanks wm161 for the patch, I used to have that same issue here on Gentoo, and the patch fixes it.
Comment 11 shattered 2007-07-31 20:18:25 UTC
kde 3.5.7, amarok 1.4.6, libtunepimp 0.5.3 -- still happens.  And very much repeatable, too.  How do I debug this?
Comment 12 shattered 2007-07-31 23:01:25 UTC
Debug output from amarokapp:

OK (the track isn't in MB database and amarok says so):

amarok: [void TagDialog::musicbrainzQuery()]
amarok: Status is: 2
amarok: [virtual void KTRMLookup::unrecognized()] .../Reservior Dogs/10 Super
amarok: Status is: 1
amarok: Status is: 4
amarok: BEGIN: virtual void KTRMLookup::puidGenerated()
amarok:   [virtual void KTRMLookup::puidGenerated()] .../Reservior Dogs/10 Sup
amarok:   cb3db725-3fff-71f8-a4f7-3f6ee23c7a61
amarok:   [KDE::ProgressBar::ProgressBar(QWidget*, QLabel*)]
amarok: END__: virtual void KTRMLookup::puidGenerated() - Took 0.011s

NOT OK (MB lookup never completes):

amarok: [void TagDialog::musicbrainzQuery()]
amarok: Status is: 2
amarok: [virtual void KTRMLookup::unrecognized()] .../Reservior Dogs/16 Home O
amarok: Status is: 1
amarok: Status is: 2
amarok: [virtual void KTRMLookup::unrecognized()] .../Reservior Dogs/16 Home O
amarok: Status is: 1
<...loops forever...>