Stop the musicbrainz lookup properly when dialog is cancelled. Thanks to wm161@wm161.net for the patch.

BUG: 116046

svn path=/trunk/extragear/multimedia/amarok/; revision=609019